kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: homework-web
    component: webserver
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework-web
  template:
    metadata:
      labels:
        app: homework-web
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: web-server
        image: nginx:alpine
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: homework-volume
            mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm -f /homework/index.html"]
      volumes:
      - name: homework-volume

        emptyDir: {}
