kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
  labels:
    app: homework-web
    component: webserver
spec:
  type: ClusterIP
  selector:
    app: homework-web
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
